# Swarm

./: README.md  definition.s
C/: alg.c  example.c  main.c  main2.c  matrix_mult.cl  parallel.cbp  parallel.depend  parallel.layout  pc-avx.h  pc-cuda.h  pc-sse.h  simd.h
C/swarmcu/: CMakeLists.txt
C/swarmcu/benchmark/: cuda.cpp  ocl.cpp
C/swarmcu/header/: jni.h
C/swarmcu/impl/: cuda.cpp
C/swarmhip/: CMakeLists.txt
C/swarmhip/header/: jni.h
C/swarmhip/impl/: hip.cpp
C/swarmhnv/: CMakeLists.txt
C/swarmhnv/header/: jni.h
C/swarmhnv/impl/: hip.cpp
C/swarmocl/: CMakeLists.txt
C/swarmocl/header/: jni.h
C/swarmocl/impl/: opencl.cpp
C/swarmsimd/: CMakeLists.txt
C/swarmsimd/benchmark/: cuda.cpp  ocl.cpp  openMP.cpp  swarmsimd.cpp  test.cpp
C/swarmsimd/header/: simd.h  simt.h  thread.h  vector.h
C/swarmsimd/header/avx/: arthmavx.h  avx.h  trfrmavx.h  trnfravx.h
C/swarmsimd/impl/: thread.cpp
C/swarmsimd/impl/avx/: arthmavx.cpp  avx.cpp  mathavx.cpp  trnfravx.cpp
C/swarmsimd/impl/threads/: threads.cpp
C/vector/: CMakeLists.txt
C/vector/header/: Fp32Vector.h  Vector.h
C/vector/impl/: Vector.cpp
JSwarm/: .project  pom.xml
JSwarm/src/main/antlr4/: JLexer.g4  JParser.g4
JSwarm/src/main/java/: ExampleKernel.java  FooKernel.java  Hardware.java  HardwareInfo.java  HardwareType.java  Hpc.java  PlatformType.java  Program.java  Test.java
JSwarm/src/main/java/io/github/seal139/jSwarm/: CudaKernel.java  Fp32.java  Fp64.java  Int16.java  Int32.java  Int64.java  Kernel.java  KernelWritter.java  PType.java
JSwarm/src/main/java/io/github/seal139/jSwarm/backend/: BackendException.java  Context.java  Cuda.java  Executor.java  HipAmd.java  HipNv.java  Jvm.java  Kernel.java  Module.java  OpenCL.java  Platform.java  Transpiler.java
JSwarm/src/main/java/io/github/seal139/jSwarm/backend/cuda/: Cuda.java  CudaContext.java  CudaDevice.java  CudaDriver.java  CudaException.java  CudaKernel.java  CudaModule.java  CudaTranspiler.java
JSwarm/src/main/java/io/github/seal139/jSwarm/backend/hip/: Hip.java  HipContext.java  HipDevice.java  HipDriver.java  HipException.java  HipKernel.java  HipModule.java
JSwarm/src/main/java/io/github/seal139/jSwarm/backend/hipAmd/: HipAmd.java  HipAmdContext.java  HipAmdDevice.java  HipAmdKernel.java  HipAmdModule.java
JSwarm/src/main/java/io/github/seal139/jSwarm/backend/hipNv/: HipNv.java  HipNvContext.java  HipNvDevice.java  HipNvKernel.java  HipNvModule.java
JSwarm/src/main/java/io/github/seal139/jSwarm/backend/jvm/: Jvm.java  JvmContext.java  JvmDevice.java  JvmException.java  JvmKernel.java  JvmModule.java
JSwarm/src/main/java/io/github/seal139/jSwarm/backend/ocl/: Ocl.java  OclContext.java  OclDevice.java  OclDriver.java  OclException.java  OclKernel.java  OclModule.java  OclTranspiler.java
JSwarm/src/main/java/io/github/seal139/jSwarm/backend/openCl/: OpenCL.java  OpenCLContext.java  OpenCLDevice.java  OpenCLKernel.java  OpenCLModule.java
JSwarm/src/main/java/io/github/seal139/jSwarm/core/: BackendIntf.java  Context.java  DataType.java  Decompiler.java  Device.java  DeviceType.java  Executor.java  Kernel.java  Log.java  Module.java  NativeCleaner.java  NativeException.java  NdRange.java  Platform.java  Program.java  Queue.java  Swarm.java  SwarmException.java  SyncDirection.java  TranspileException.java  Transpiler.java  Worker.java
JSwarm/src/main/java/io/github/seal139/jSwarm/datatype/: DoubleVector.java  FloatArray.java  FloatVector.java  IntVector.java  LongVector.java  ShortVector.java  Vector.java
JSwarm/src/main/java/io/github/seal139/jSwarm/exception/: DecompilationException.java
JSwarm/src/main/java/io/github/seal139/jSwarm/extension/: Exec.java  Parallel.java
JSwarm/src/main/java/io/github/seal139/jSwarm/hardware/: Hardware.java  HardwareInfo.java  HardwareType.java  PlatformType.java
JSwarm/src/main/java/io/github/seal139/jSwarm/intf/: RuntimeIntf.java
JSwarm/src/main/java/io/github/seal139/jSwarm/misc/: Common.java  Decompiler.java  FunctionIntrinsic.java  Log.java  NativeCleaner.java  Worker.java
JSwarm/src/main/java/io/github/seal139/jSwarm/runtime/: DeviceType.java  ExampleKernel.java  FooKernel.java  Kernel.java  LaunchParameter.java  NativeException.java  NdRange.java  Program.java  SyncDirection.java  TranspileException.java  Transpiler.java
JSwarm/src/main/java/io/github/seal139/jSwarm/runtime/datatype/: DoubleVector.java  FloatVector.java  IntegerVector.java  LongVector.java  ShortVector.java  Vector.java
JSwarm/src/main/java/io/github/seal139/jSwarm/runtime/intf/: RuntimeIntf.java
JSwarm/src/main/java/io/github/seal139/jSwarm/transpiler/: Decompiler.java  JLexer.java  JParser.interp  JParser.java  JParserBaseListener.java  JParserListener.java
JSwarm/src/main/java/io/github/seal139/jSwarm/wrapper/: LaunchParameter.java  Swarm.java
JSwarm/src/main/original/: JParser.g4
JSwarm/src/main/resources/Windows/: Vector  Vector2  Vectorok
Jupyter/: benchmark.ipynb
